--- a/codigo/back/src/main/resources/application.properties
+++ b/codigo/back/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=aluguel_carros
+
+# ===============================
+# Configuração do Banco de Dados
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/aluguel_carros
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# Configurações de servidor
+# ===============================
+server.port=8080
+
+# ===============================
+# Logging
+# ===============================
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
