--- a/codigo/back/src/main/resources/application.properties
+++ b/codigo/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aluguel_carros
 
 # ===============================
-# ConfiguraÃ§Ã£o do Banco de Dados
+# Configuração do Banco de Dados
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/aluguel_carros
 spring.datasource.username=postgres
@@ -12,12 +12,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#Seeder
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 # ===============================
-# ConfiguraÃ§Ãµes de servidor
+# Configurações de Servidor
 # ===============================
 server.port=8080
 
