conectando login no front

--- a/codigo/back/src/main/resources/application.properties
+++ b/codigo/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aluguel_carros
 
 # ===============================
-# Configuração do Banco de Dados
+# Configuraï¿½ï¿½o do Banco de Dados
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/aluguel_carros
 spring.datasource.username=postgres
@@ -21,7 +21,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 # ===============================
-# Configurações de Servidor
+# Configuraï¿½ï¿½es de Servidor
 # ===============================
 server.port=8080
 
